care/force-app/main/default/objects/Offering__c/Offering__c.object-meta.xml
<CustomObject>
    <label>Offering</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>