care/force-app/main/default/objects/Offering__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <label>Care Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Care Infant</fullName>
            </value>
            <value>
                <fullName>Child Care Toddler</fullName>
            </value>
            <value>
                <fullName>Child Care Pre School</fullName>
            </value>
            <value>
                <fullName>Child Care School Aged</fullName>
            </value>
            <value>
                <fullName>Child Care Pre Teens and Teens</fullName>
            </value>
            <value>
                <fullName>Senior Care Assisted Living</fullName>
            </value>
            <value>
                <fullName>Senior Care Independent Living</fullName>
            </value>
            <value>
                <fullName>Senior Care Memory Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>