care/force-app/main/default/objects/Offering__c/fields/Daily_Price__c.field-meta.xml
<CustomField>
    <fullName>Daily_Price__c</fullName>
    <label>Daily Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>