care/force-app/main/default/objects/Offering__c/fields/Galore_uuid__c.field-meta.xml
<CustomField>
    <fullName>Galore_uuid__c</fullName>
    <externalId>true</externalId>
    <label>Galore uuid</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>