care/force-app/main/default/objects/Offering__c/fields/Hourly_Price__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Price__c</fullName>
    <label>Hourly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>