care/force-app/main/default/objects/Offering__c/fields/Maximum_Months__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Months__c</fullName>
    <label>Maximum Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>