care/force-app/main/default/objects/Offering__c/fields/Minimum_Months__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Months__c</fullName>
    <label>Minimum Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>