care/force-app/main/default/objects/Offering__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Centers</fullName>
            </value>
            <value>
                <fullName>Nanny Agencies</fullName>
            </value>
            <value>
                <fullName>Fccs</fullName>
            </value>
            <value>
                <fullName>Camps</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Special Needs</fullName>
            </value>
            <value>
                <fullName>Adult Day Care</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>Preschool</fullName>
            </value>
            <value>
                <fullName>Memory Care</fullName>
            </value>
            <value>
                <fullName>Backup Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>